@@ -251,6 +251,8 @@ struct Game_state {
     Sim_entity_collision_group* wall_collision;
     Sim_entity_collision_group* std_room_collision;
     
+    f32 time;
+    
     Hero_bitmaps hero_bitmaps[4];
 #if 0
     Pacman_state pacman_state;
